--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>CV template</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,18 +15,18 @@ body {
 
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
-  padding: 30px;
+  background-color: #f1f1f2;
+  padding: 29px;
   text-align: center;
-  font-size: 35px;
+  font-size: 33px;
 }
 
 /* Create three equal columns that floats next to each other */
 .column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  float: right;
+  width: 32.33%;
+  padding: 11px;
+  height: 288px; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
@@ -38,8 +38,8 @@ body {
 
 /* Style the footer */
 .footer {
-  background-color: #f1f1f1;
-  padding: 10px;
+  background-color: #f1f1f2;
+  padding: 11px;
   text-align: center;
 }
 
@@ -53,18 +53,11 @@ body {
 </head>
 <body>
 
-<h2>CSS Template using Float</h2>
-<p>In this example, we have created a header, three equal columns and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect.</p>
+<h2>CV template</h2>
+
 
 <div class="header">
   <h2>Header</h2>
-</div>
-
-<div class="row">
-  <div class="column" style="background-color:#aaa;">Column</div>
-  <div class="column" style="background-color:#bbb;">Column</div>
-  <div class="column" style="background-color:#ccc;">Column</div>
 </div>
 
 <div class="footer">
